feat : 송금 페이지 추가

--- a/benefit.html
+++ b/benefit.html
@@ -169,8 +169,10 @@
             <span>혜택</span>
           </div>
           <div style="color: #929797">
-            <i class="fa-solid fa-won-sign fa-lg"></i>
-            <span>송금</span>
+            <a class="bottom-nav__a" href="remittance.html">
+              <i class="fa-solid fa-won-sign fa-lg"></i>
+              <span>송금</span>
+            </a>
           </div>
           <div style="color: #929797">
             <i class="fa-solid fa-arrow-trend-up fa-lg"></i>
