refactor: 파일명 변경

--- a/benefit.html
+++ b/benefit.html
@@ -159,7 +159,7 @@
 
         <div class="bottom-nav">
           <div>
-            <a class="bottom-nav__benefit" href="index.html">
+            <a class="bottom-nav__benefit" href="home.html">
               <i class="fa-solid fa-house fa-lg"></i>
               <span>홈</span>
             </a>
