--- a/remittance.html
+++ b/remittance.html
@@ -42,7 +42,7 @@
 
         <div class="bottom-nav">
           <div>
-            <a class="bottom-nav__benefit" href="index.html">
+            <a class="bottom-nav__benefit" href="home.html">
               <i class="fa-solid fa-house fa-lg"></i>
               <span>홈</span>
             </a>
